# Compression

./: README.md  dna_compression.txt  pyproject.toml  requirements-dev.txt  requirements.txt
compression/: gerador.py  main.py
compression/performance/: perform.py
compression/questoes/: bitwise.py  string.py
files/: sequencia_100.txt  sequencia_1000.txt  sequencia_10000.txt  sequencia_2500.txt  sequencia_5000.txt  sequencia_7500.txt  teste1.txt
