[tool.poetry]
name = "compression"
version = "0.1.0"
description = ""
authors = ["kennedywc <kennedy.costan10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psutil = "^6.1.0"
rich = "^13.9.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[tool. ruff]
line-length = 79 # colunas OBS: começa no 0

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool .ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
